# fact-checker

./: .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  SUMMARY.md  ideation.md
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py  settings.py
backend/app/api/: ground_truth.py  ingestion.py  knowledge.py  knowledge_browse.py  knowledge_graph.py  knowledge_ratings.py  knowledge_search.py  reports.py
backend/app/contracts/: __init__.py  logging.py  store_sync.py  vault.py
backend/app/evaluation/: __init__.py  evaluator.py  evidence.py  indexing.py  markdown.py  (+6 more)
backend/tests/: test_claim_extraction.py  test_compliance.py  test_contracts.py  test_evaluation_e2e.py  test_evaluation_evaluator.py  test_evaluation_evidence.py  test_evaluation_markdown.py  test_evaluation_persistence.py  test_evaluation_schemas.py  test_evaluation_validation.py  test_ground_truth_api.py  test_ground_truth_clients.py  test_ground_truth_discovery.py  test_ground_truth_e2e.py  test_ground_truth_indexing.py  test_ground_truth_persistence.py  test_ground_truth_schemas.py  test_ingestion_api.py  test_ingestion_e2e.py  test_ingestion_persistence.py  test_ingestion_progress.py  test_ingestion_schemas.py  test_keyframes.py  test_knowledge_api.py  test_knowledge_consistency.py  test_knowledge_graph.py  test_knowledge_ratings.py  test_knowledge_search.py  test_knowledge_vault.py  test_paper_processing.py  test_reports_api.py  test_research_basis.py  test_schemas.py  test_settings.py  test_tiktok_adapter.py  test_transcript.py  test_video_upload.py
(+210 files in other folders)
