[project]
name = "fact-checker-backend"
version = "0.1.0"
description = "FastAPI backend contracts for the Fact Checker knowledge store."
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "pydantic-settings",
  "python-multipart",
  "pymongo",
  "qdrant-client",
  "python-frontmatter",
  "pyyaml",
  "httpx>=0.28.1",
  "openai>=2.32.0",
  "pypdf>=6.10.2",
]

[dependency-groups]
dev = [
  "pytest",
  "ruff",
  "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
